# Virtual-Computer

./: CMakeLists.txt  README.md  main.c
src/: cpu.c  cpu.h  instruction.c  instruction.h  memory.c  memory.h  registers.c  registers.h  utils.c  utils.h
tests/: test_instruction_encoder.c
